tests/sksl/errors/Ossfuzz29085.glsl

void a() {
    int i;
    ivec3(ivec2(i = i), int(1)).xzy.xx.x;
}
